--- a/frontend/src/activityrow.css
+++ b/frontend/src/activityrow.css
@@ -2,5 +2,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 50vw;
+  width: 40vw;
+  gap: -1px;
+}
+
+#activity, #duration {
+  font-size: 16px;
 }
