--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position:relative;
-  left:18%;
+  position: relative;
+  left: 18%;
+  margin-top: 20px;
 }
 
 #activities-header {
@@ -16,7 +17,8 @@
 }
 
 #activity-name, #activity-duration {
-  font-size: 30px
+  font-size: 28px;
+  letter-spacing: 0.025em;
 }
 
 #accomplishments-header {
@@ -48,15 +50,17 @@ input[type=text] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  background-color:transparent;
+  color: white;
 }
 
 input[type=text]:focus {
-  outline: 2px solid #4284ff;
+  outline: 2px solid #48A3FF;
 }
 
 input[type=submit] {
   width: 100%;
-  background-color: #4284ff;
+  background-color: #2d81d4;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -66,7 +70,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #346cd3;
+  background-color: #3479d3;
 }
 
 #add-entry-text {
