--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -1,11 +1,11 @@
 #activities-container {
-  float: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
   left: 18%;
   margin-top: 20px;
+  float: left;
 }
 
 #activities-header {
@@ -28,8 +28,13 @@
   text-align: center;
   padding-bottom: 10px;
   border-bottom: 2px solid;
+  
 }
-
+#clear-fix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
 /* FORM STYLES */
 #form-container {
@@ -40,6 +45,7 @@
   display: flex;
   flex-direction: column;
   width: 300px; /* Set a fixed width if needed */
+  z-index: 50;
 }
 
 input[type=text] {
