--- a/frontend/src/nav.css
+++ b/frontend/src/nav.css
@@ -5,18 +5,15 @@ nav {
   display: flex;
   justify-content: center;
   gap: 3%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 23px;
+  padding-bottom: 28px;
   width: 100%;
-  background-color: rgb(10, 10, 10);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   transition: 350ms;
 }
 
 nav:hover {
-  border-bottom-left-radius: 30%;
-  border-bottom-right-radius: 30%;
-  padding-top: 22px;
-  padding-bottom: 22px;
+  background-color: rgba(6, 6, 6, 0.7);
 }
 
 .nav-item {
