--- a/frontend/src/nav.css
+++ b/frontend/src/nav.css
@@ -5,26 +5,22 @@ nav {
   display: flex;
   justify-content: center;
   gap: 3%;
-  padding-top: 23px;
-  padding-bottom: 28px;
+  padding: 20px 0 20px 0;
   width: 100%;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   transition: 350ms;
-}
-
-nav:hover {
-  background-color: rgba(6, 6, 6, 0.7);
+  background-color: #2d81d4;
 }
 
 .nav-item {
   text-decoration: none;
   font-family: Comfortaa;
   padding: 5px 5px 5px 5px;
-  font-size: 15px;
+  font-size: 16px;
   color: rgb(230, 230, 230);
   transition: 300ms;
+  font-weight: bold;
 }
 
 .nav-item:hover {
-  color: #48A3FF;
+  color: #a2b9cc;
 }
