--- a/frontend/src/pages/analytics.css
+++ b/frontend/src/pages/analytics.css
@@ -55,7 +55,7 @@
   font-family: Comfortaa;
   background-color: rgb(18, 18, 18);
   border: none;
-  color: #828a93;
+  color: #8d959e;
   border-radius: 10px;
   width: 300px;
   margin-left: auto;
@@ -79,4 +79,9 @@
   margin-left: auto;
   margin-right: auto;
   transition: 100ms;
+}
+
+.charts h3 {
+  text-align: center;
+  color: #cc0000;
 }
