--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,4 @@
 input[type=text] {
-  width: 50%;
   padding: 12px 15px;
   margin: 8px 0;
   display: inline-block;
@@ -15,7 +14,6 @@ input[type=text]:focus {
 }
 
 input[type=submit] {
-  width: 50%;
   background-color: #2d81d4;
   color: white;
   padding: 14px 20px;
@@ -30,5 +28,9 @@ input[type=submit]:hover {
 }
 
 .password-container {
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 95vh;
 }
