--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,11 +9,12 @@ input[type=text] {
   color: white;
 }
 
-input[type=text]:focus {
+input[type=submit]:focus {
   outline: 2px solid #48A3FF;
 }
 
 input[type=submit] {
+  box-shadow: 0 0 10px #2d81d4;
   background-color: #2d81d4;
   color: white;
   padding: 14px 20px;
@@ -33,4 +34,19 @@ input[type=submit]:hover {
   align-items: center;
   justify-content: center;
   height: 95vh;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 500;
+}
+
+.big-password-container {
+  width:100%;
+  height:100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+#password-prompt {
+  text-shadow: 0 0 10px white;
 }
