--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-input[type=text] {
+#password-input {
   padding: 12px 15px;
   margin: 8px 0;
   display: inline-block;
@@ -9,11 +9,11 @@ input[type=text] {
   color: white;
 }
 
-input[type=submit]:focus {
+#password-input:focus {
   outline: 2px solid #48A3FF;
 }
 
-input[type=submit] {
+#password-submit {
   box-shadow: 0 0 10px #2d81d4;
   background-color: #2d81d4;
   color: white;
@@ -24,7 +24,7 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+#password-submit:hover {
   background-color: #3479d3;
 }
 
