fixed styling bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,12 @@
 #password-input {
   padding: 12px 15px;
   margin: 8px 0;
-  display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
   background-color:transparent;
   color: white;
+  width: 100%;
 }
 
 #password-input:focus {
