--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,5 @@
 html {
-  scroll-behavior: smooth;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
@@ -20,4 +19,21 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: Comfortaa;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #48A3FF;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(65, 146, 226);
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(10, 10, 10);
 }
