--- a/frontend/src/pages/analytics.css
+++ b/frontend/src/pages/analytics.css
@@ -1,28 +1,27 @@
-.container {
-  margin-top: 15px;
-}
 .time-row {
-  flex: 0 1 auto;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: 30px;
+  align-items: end;
+  height: 100px;
 }
 
-.time-row button {
-  all: unset;
+.backButton {
   color: white;
   transition: 200ms;
-  height: fit-content;
-  margin: auto 0 auto 0;
 }
 
-.time-row button:hover {
+.backButton:hover {
   color: #a2c4e6;
+  cursor: pointer;
 }
 
 .flex-container {
   display: flex;
-  margin: 0 70px 0 70px;
+  padding: 0 70px 0 70px;
+  align-items: center;
+  height: calc(100% - 200px)
 }
 
 .charts {
@@ -32,7 +31,9 @@
 
 #pi-chart-container {
   width: fit-content;
-  margin: auto;
+  height: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .empty {
@@ -53,7 +54,7 @@
 .time-button {
   height: 40px;
   font-family: Comfortaa;
-  background-color: rgb(18, 18, 18);
+  background-color: rgb(18, 18, 18, 0);
   border: none;
   color: #8d959e;
   border-radius: 10px;
@@ -71,9 +72,10 @@
 .selected {
   height: 40px;
   font-family: Comfortaa;
-  background-color: #358ee8;
+  background-color: #2d81d4;
+  box-shadow: 0 0 8px #2d81d4;
+  color: white;
   border: none;
-  color: #c7c7c7;
   border-radius: 10px;
   width: 300px;
   margin-left: auto;
@@ -86,10 +88,16 @@
   color: #cc0000;
 }
 
-section {
-  height: 100vh;
+html {
+  scroll-snap-type: y mandatory;
+  scroll-padding-top: 70px;
+  scroll-behavior: smooth;
 }
 
-.scroll-container {
-  
+section {
+  background-image: linear-gradient(rgb(18, 18, 18), rgb(25, 25, 25));
+  height: calc(100vh - 70px);
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
+
