--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,9 +4,11 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  background-color:transparent;
+  background-color: transparent;
   color: white;
   width: 100%;
+  font-size: 17px;
+  height: 44px;
 }
 
 #password-input:focus {
