--- a/frontend/src/pages/analytics.css
+++ b/frontend/src/pages/analytics.css
@@ -4,7 +4,7 @@
   justify-content: center;
   gap: 30px;
   align-items: end;
-  height: 100px;
+  height: 13vh;
 }
 
 .backButton {
@@ -21,7 +21,7 @@
   display: flex;
   padding: 0 70px 0 70px;
   align-items: center;
-  height: calc(100% - 200px)
+  height: calc(100% - 26vh)
 }
 
 .charts {
