--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -95,14 +95,34 @@ input[type=submit]:hover {
   width: 7px;
 }
 
-.spinner {
-  text-align: center;
-  font-size: 1.5em;
-  padding: 20px;
-  position: absolute;
-  color: white;
+.loader-container {
   display: flex;
-  left: 50%;
-  top: 50%;
-  font-family: Comfortaa, Raleway, Nunito;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading {
+  padding: 20px;
+  color: white;
+}
+
+.loader {
+  width: 1.5vh;
+  aspect-ratio: 1;
+  --c: no-repeat linear-gradient(#4493e3 0 0);
+  background: 
+    var(--c) 0%   50%,
+    var(--c) 50%  50%,
+    var(--c) 100% 50%;
+  background-size: 20% 100%;
+  animation: l1 1s infinite linear;
+}
+
+@keyframes l1 {
+  0%  {background-size: 20% 100%,20% 100%,20% 100%}
+  33% {background-size: 20% 10% ,20% 100%,20% 100%}
+  50% {background-size: 20% 100%,20% 10% ,20% 100%}
+  66% {background-size: 20% 100%,20% 100%,20% 10% }
+  100%{background-size: 20% 100%,20% 100%,20% 100%}
 }
