--- a/frontend/src/pages/home.css
+++ b/frontend/src/pages/home.css
@@ -1,3 +1,7 @@
+#homepage-container {
+  overflow: hidden;
+}
+
 #activities-container {
   display: flex;
   flex-direction: column;
@@ -19,8 +23,8 @@
 #activity-name, #activity-duration {
   font-size: 28px;
   letter-spacing: 0.025em;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 #accomplishments-header {
@@ -31,6 +35,7 @@
   padding-bottom: 10px;
   border-bottom: 2px solid;
 }
+
 #clear-fix::after {
   content: "";
   clear: both;
@@ -93,36 +98,4 @@ input[type=submit]:hover {
 
 #activity-scroll-control::-webkit-scrollbar {
   width: 7px;
-}
-
-.loader-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.loading {
-  padding: 20px;
-  color: white;
-}
-
-.loader {
-  width: 1.5vh;
-  aspect-ratio: 1;
-  --c: no-repeat linear-gradient(#4493e3 0 0);
-  background: 
-    var(--c) 0%   50%,
-    var(--c) 50%  50%,
-    var(--c) 100% 50%;
-  background-size: 20% 100%;
-  animation: l1 1s infinite linear;
-}
-
-@keyframes l1 {
-  0%  {background-size: 20% 100%,20% 100%,20% 100%}
-  33% {background-size: 20% 10% ,20% 100%,20% 100%}
-  50% {background-size: 20% 100%,20% 10% ,20% 100%}
-  66% {background-size: 20% 100%,20% 100%,20% 10% }
-  100%{background-size: 20% 100%,20% 100%,20% 100%}
 }
