--- a/frontend/src/pages/analytics.css
+++ b/frontend/src/pages/analytics.css
@@ -27,13 +27,22 @@
 .charts {
   flex-grow: 1.5;
   flex-basis: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #pi-chart-container {
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+
+#pi-chart {
+  width: 100%;
+  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .empty {
